style-mobile.css
.top-image-container {
  height: 75vw;
  margin-right: 0;
}

.top-image{
  height: 75vw;
  margin-right: 0;
}

.logo{
  position: absolute;
  top: 400px;
  right: 30px;
  font-size: 120px;
}

main{
  width: 100%;
  height: auto;
}

main h1{
  width: 100%;
  margin-left: 0px;
  margin-top: 0px;
  font-size: 100px;
  padding: 60px 0px 60px 0px;
}

main h1:before{
  border-width: 0 0 0 0;
}

main li{
  font-size: 60px;
  padding: 60px 0px 60px 0px;
}

main .signup-form {
  width: 80%;
  font-size: 80px;
}

main .signup-form input{
  width: 100%;
  font-size: 60px;
}

main .signup-form input[type=submit] {
  font-size: 60px;
  margin-bottom: 180px;
}

main .company-legal{
  font-size: 20px;
}

